added trunkat script to demo

--- a/demo.html
+++ b/demo.html
@@ -27,7 +27,7 @@
  <script src="js/jquery.trunkat.js" type="text/javascript"></script>
  <script type="text/javascript">  
   $().ready(function() {  
-   $('.tip').truncate();  
+   $('.tip').trunkat();  
   });  
  </script>
 </body>  
